oxiplate-derive/tests/broken/derive/include-failed-expand.stderr
error: Path does not exist: `$DIR/templates/path/that/does/not/exist`
 --> tests/broken/derive/include-failed-expand.rs:4:22
  |
4 | #[oxiplate_include = "path/that/does/not/exist"]
  |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: `Data` doesn't implement `std::fmt::Display`
 --> tests/broken/derive/include-failed-expand.rs:8:18
  |
8 |     print!("{}", Data);
  |             --   ^^^^ `Data` cannot be formatted with the default formatter
  |             |
  |             required by this formatting parameter
  |
help: the trait `std::fmt::Display` is not implemented for `Data`
 --> tests/broken/derive/include-failed-expand.rs:5:1
  |
5 | struct Data;
  | ^^^^^^^^^^^
  = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
